UI layout bug fix

--- a/src/views/RoomView.scss
+++ b/src/views/RoomView.scss
@@ -19,9 +19,6 @@
     display: flex;
     height: 100%;
     max-height: 69vh;
-    &.none {
-      display: none;
-    }
   }
   &__upper {
     &.portraitMode {
@@ -45,4 +42,7 @@
       margin-right: 0.5rem;
     }
   }
+}
+.none {
+  display: none !important;
 }
